<resources>
    <string name="app_name">Diya Vegetable</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vegetable_delivery">Vegetable Store</string>
    <string name="text">અવે મેળવો ઘરે બેઠા</string>
    <string name="text1">તાજા અને સસ્તા શાકભાજી</string>
    <string name="powerby">Chill Solutions</string>
    <string name="powerby1">6355695954</string>
    <string name="diya" />
    <string-array name="weight">
        <item>1Kg</item>
        <item>250gm</item>
        <item>500gm</item>
    </string-array>
</resources>
